# papyro

./: .env.example  LICENSE  README.md  pyproject.toml
papyro/: main.py
papyro/content/: site-config.json
papyro/content/pages/: about.md  github.md
papyro/content/posts/: hello-world.md  markdown-features.md
papyro/routers/: content.py
papyro/services/: content_service.py
papyro/templates/papyro-default/: error.html  index.html  page.html
papyro/templates/papyro-default/css/: styles.css
papyro/templates/papyro-typewriter/: error.html  layout.html  post.html
papyro/templates/papyro-typewriter/css/: styles.css
papyro/utils/: config.py  templates.py
